<resources>
    <string name="app_name">Liveasy</string>
    <string name="please_select_your_language">Please Select Your Language</string>
    <string name="english">English</string>
    <string name="you_can_change_the_language_at_any_time">You can change the language at any time</string>
    <string name="next">NEXT</string>
    <string name="_91">+91 - </string>
    <string name="mobile_number">Mobile Number</string>

    <string name="continue1">CONTINUE</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="code_is_sent_to">Code is sent to you</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="request_again">Request Again</string>
    <string name="verify_and_continue">VERIFY AND CONTINUE</string>
    <string name="please_select_your_profile">Please select your profile</string>
    <string name="demo">Lorem ipsum dolor sit amet, consecteture adipiscicing</string>
    <string name="transporter">Transporter</string>
    <string name="please_enter_your_mobile_number">Please Enter Your Mobile Number</string>
</resources>