<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entermobilenumberone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_mobile_number"
            android:textSize="19sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/you_can_change_the_language_at_any_time"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_marginTop="2dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/backbox"
            android:layout_margin="25dp"
            android:gravity="left"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:src="@drawable/flag" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="10dp"
                android:padding="7dp"
                android:text="@string/_91"
                android:textSize="20sp" />

            <EditText
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:importantForAutofill="no"
                android:imeOptions="actionDone"
                android:id="@+id/input_mobile_number"
                android:hint="@string/mobile_number" />


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/btn1"
                android:background="@color/white"
                android:text="@string/continue1"
                android:textColor="@color/white"
                android:textSize="15sp" />
            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/progressbar_sending_otp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>


</ScrollView>