<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/img1"
            android:layout_marginTop="120dp"
            android:src="@drawable/image1"

             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_select_your_language"
            android:textSize="19sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/you_can_change_the_language_at_any_time"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_marginTop="2dp"
            />

        <LinearLayout
            android:layout_width="237dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/backbox"
            android:gravity="left"
            android:orientation="horizontal"
           >

            <TextView
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:text="@string/english"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:src="@drawable/drop_down" />

        </LinearLayout>

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="237dp"
            android:layout_height="50dp"
            android:id="@+id/btn1"
            android:background="@color/white"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </LinearLayout>


</ScrollView>