<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".dashboard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginBottom="30dp"
        android:padding="5dp"
        android:id="@+id/txtv"
        android:text="@string/please_select_your_profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/ll1"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtv"
        android:layout_margin="20dp"
        android:background="@drawable/backbox"
        android:padding="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/shipper" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="top"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="Shipper"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/demo"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:id="@+id/ll2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/backbox"
        android:padding="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/transport" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="top"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/transporter"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/demo"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll2"
        android:padding="5dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:text="@string/continue1"
        android:textColor="@color/white"
        android:textSize="15sp" />


</RelativeLayout>