<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verifyenterotptwo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_phone"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/code_is_sent_to"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_marginTop="2dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:id="@+id/inputotp1"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/otpbox"
                tools:ignor="LableFor"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:id="@+id/inputotp2"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/otpbox"
                tools:ignor="LableFor"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:id="@+id/inputotp3"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/otpbox"
                tools:ignor="LableFor"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:id="@+id/inputotp4"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/otpbox"
                tools:ignor="LableFor"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:id="@+id/inputotp5"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/otpbox"
                tools:ignor="LableFor"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:id="@+id/inputotp6"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/otpbox"
                tools:ignor="LableFor"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_code"
                android:textSize="17sp"
                android:gravity="center"
                android:layout_marginTop="2dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_again"
                android:id="@+id/textresendotp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:clickable="true"
                />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_margin="25dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/verify"
                android:background="@color/white"
                android:text="@string/verify_and_continue"
                android:textColor="@color/white"
                android:textSize="15sp" />
            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/progressbar_verify_otp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>

</ScrollView>